--- a/app/src/main/res/layout/activity_chat_main.xml
+++ b/app/src/main/res/layout/activity_chat_main.xml
@@ -48,7 +48,7 @@
             android:layout_marginLeft="20dp"
             android:fontFamily="@font/nunito_semibold"
             android:text="Davit Karapetyan"
-            android:textColor="#fff"
+            android:textColor="@color/primary__color"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -262,6 +262,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@drawable/edit__input"
+            android:backgroundTint="@color/white"
             android:elevation="10dp"
             android:fontFamily="@font/nunito_regular"
             android:hint="Message"
