--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,7 +103,6 @@
                 android:layout_marginTop="25dp"
                 android:background="@drawable/edit__input"
                 android:clipToPadding="false"
-                android:elevation="10dp"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Search"
                 android:inputType="textEmailAddress"
@@ -121,6 +120,7 @@
                 android:layout_marginHorizontal="20dp"
                 app:cardCornerRadius="25dp"
                 app:contentPadding="20dp"
+                android:backgroundTint="#ECF3FA"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
