--- a/app/src/main/res/layout/activity_chat_main.xml
+++ b/app/src/main/res/layout/activity_chat_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/page_bg"
     tools:context=".ChatMainActivity">
 
     <!-- Your non-scrolling element 1 -->
@@ -16,7 +17,7 @@
             android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:background="@drawable/chat_header"
+            style="@style/chat__header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -107,7 +108,7 @@
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="20dp"
                 android:text="Hello this is Davit Karapetyan how are you if you are not okay I can help you"
-                android:textColor="#fff"
+                style="@style/chat_message"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -149,7 +150,7 @@
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="20dp"
                 android:text="Hello this is Davit Karapetyan how are you if you are not okay I can help you"
-                android:textColor="#fff"
+                style="@style/chat_message"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -191,7 +192,7 @@
                 android:paddingVertical="10dp"
                 android:paddingHorizontal="20dp"
                 android:text="Hello this is Davit Karapetyan how are you if you are not okay I can help you"
-                android:textColor="#fff"
+                style="@style/chat_message"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -261,8 +262,7 @@
             android:id="@+id/editText1"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:background="@drawable/edit__input"
-            android:backgroundTint="@color/white"
+            style="@style/input__bg"
             android:elevation="10dp"
             android:fontFamily="@font/nunito_regular"
             android:hint="Message"
@@ -278,7 +278,7 @@
             android:id="@+id/fab"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:backgroundTint="@color/white"
+            style="@style/fab_bg"
             app:tint="@color/primary__color"
             android:contentDescription="a"
             android:clipToOutline="true"
