--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/page_bg"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -22,6 +23,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:text="Moments"
+                style="@style/text__color"
                 android:textSize="22dp" />
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -83,6 +85,7 @@
                     android:fontFamily="@font/nunito_semibold"
                     android:text="Latest Posts"
                     android:textSize="22dp"
+                    style="@style/text__color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -101,7 +104,7 @@
                 android:layout_height="47dp"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="25dp"
-                android:background="@drawable/edit__input"
+                style="@style/input__bg"
                 android:clipToPadding="false"
                 android:fontFamily="@font/nunito_regular"
                 android:hint="Search"
@@ -120,13 +123,12 @@
                 android:layout_marginHorizontal="20dp"
                 app:cardCornerRadius="25dp"
                 app:contentPadding="20dp"
-                android:backgroundTint="#ECF3FA"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/primary__color"
-                app:strokeWidth="2dp">
+                style="@style/card_bg"
+                app:strokeWidth="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,7 +148,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Davit Karapetyan"
-                            android:textColor="@color/black"
+                            style="@style/text__color"
                             android:fontFamily="@font/nunito_medium"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
@@ -188,175 +190,7 @@
                         android:fontFamily="@font/nunito_regular"
                         android:textSize="14sp"
                         android:layout_marginTop="10dp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="more"
-                        android:fontFamily="@font/nunito_regular"
-                        android:textColor="#8d8d8d"
-                        android:textSize="14sp"/>
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="25dp"
-                app:contentPadding="20dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/primary__color"
-                app:strokeWidth="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/image1" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Davit Karapetyan"
-                            android:textColor="@color/black"
-                            android:fontFamily="@font/nunito_medium"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:textSize="17dp"/>
-
-                    </LinearLayout>
-                    <com.google.android.material.divider.MaterialDivider
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginTop="7dp"
-                        app:dividerColor="@color/primary__color" />
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="230dp"
-                        android:src="@drawable/image2"
-                        android:background="@drawable/rounded_corner"
-                        android:clipToOutline="true"
-                        android:layout_marginTop="7dp"
-                        android:scaleType="centerCrop"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:layout_width="26dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/like"/>
-                        <ImageView
-                            android:layout_width="23dp"
-                            android:layout_height="23dp"
-                            android:layout_marginLeft="15dp"
-                            android:src="@drawable/comment"/>
-                    </LinearLayout>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry...."
-                        android:fontFamily="@font/nunito_regular"
-                        android:textSize="14sp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="more"
-                        android:fontFamily="@font/nunito_regular"
-                        android:textColor="#8d8d8d"
-                        android:textSize="14sp"/>
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                app:cardCornerRadius="25dp"
-                app:contentPadding="20dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/primary__color"
-                app:strokeWidth="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/image1" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Davit Karapetyan"
-                            android:textColor="@color/black"
-                            android:fontFamily="@font/nunito_medium"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:textSize="17dp"/>
-
-                    </LinearLayout>
-                    <com.google.android.material.divider.MaterialDivider
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginTop="7dp"
-                        app:dividerColor="@color/primary__color" />
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="230dp"
-                        android:src="@drawable/image2"
-                        android:background="@drawable/rounded_corner"
-                        android:clipToOutline="true"
-                        android:layout_marginTop="7dp"
-                        android:scaleType="centerCrop"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-                        <ImageView
-                            android:layout_width="26dp"
-                            android:layout_height="24dp"
-                            android:src="@drawable/like"/>
-                        <ImageView
-                            android:layout_width="23dp"
-                            android:layout_height="23dp"
-                            android:layout_marginLeft="15dp"
-                            android:src="@drawable/comment"/>
-                    </LinearLayout>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry...."
-                        android:fontFamily="@font/nunito_regular"
-                        android:textSize="14sp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black"/>
+                        style="@style/text__color"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
