--- a/app/src/main/res/drawable/message_bg_secondary.xml
+++ b/app/src/main/res/drawable/message_bg_secondary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#94BFFF"/>
-    <corners android:radius="15dp"/>
+    <solid android:color="@color/active_bg"/>
+    <corners android:radius="15dp" android:bottomLeftRadius="0dp"/>
 </shape>
