--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/page_bg"
     tools:context=".ChatFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -19,7 +20,7 @@
             android:layout_height="44dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="25dp"
-            android:background="@drawable/edit__input"
+            style="@style/input__bg"
             android:clipToPadding="false"
             android:drawableEnd="@drawable/baseline_search_24"
             android:fontFamily="@font/nunito_regular"
@@ -47,12 +48,13 @@
 
                 <!-- Your scrollable elements go here -->
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:elevation="5dp"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="10dp"
-                    android:onClick="navigateToChatMain">
+                    >
 
                     <ImageView
                         android:id="@+id/imageView"
@@ -101,7 +103,7 @@
                     android:elevation="5dp"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="10dp"
-                    android:onClick="navigateToChatMain">
+                    >
 
                     <ImageView
                         android:id="@+id/imageView1"
@@ -149,7 +151,7 @@
                     android:elevation="5dp"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="10dp"
-                    android:onClick="navigateToChatMain">
+                    >
 
                     <ImageView
                         android:id="@id/imageView2"
