--- a/app/src/main/res/drawable/massage_bg.xml
+++ b/app/src/main/res/drawable/massage_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/primary__color"/>
-    <corners android:radius="15dp" android:bottomRightRadius="0dp"/>
+    <corners android:radius="@dimen/_24sdp" android:bottomRightRadius="0dp"/>
 </shape>
