--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/page_bg"
-    tools:context=".LoginActivity">
+    tools:context=".activities.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,62 +54,74 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header_lottie" />
 
-        <EditText
-            android:id="@+id/editText"
+        <LinearLayout
+            android:id="@+id/loginLayout"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="30dp"
-            style="@style/input__bg"
-            android:clipToPadding="false"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            android:fontFamily="@font/nunito_regular"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/heading_text" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/heading_text">
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="20dp"
-            style="@style/input__bg"
-            android:clipToPadding="false"
-            android:fontFamily="@font/nunito_regular"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
+            <EditText
+                android:id="@+id/email"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
 
-        <Button
-            android:id="@+id/log_in"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_marginHorizontal="25dp"
-            android:backgroundTint="@color/primary__color"
-            android:clipToOutline="true"
-            android:elevation="30dp"
-            android:fontFamily="@font/nunito_medium"
-            android:text="Log In"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:outlineAmbientShadowColor="@color/primary__color"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+            <EditText
+                android:id="@+id/password"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="20dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true">
+                <Button
+                    android:id="@+id/log_in"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/primary__color"
+                    android:clipToOutline="true"
+                    android:elevation="30dp"
+                    android:fontFamily="@font/nunito_medium"
+                    android:outlineAmbientShadowColor="@color/primary__color"
+                    android:text="Log In"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:visibility="invisible"/>
+            </FrameLayout>
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -119,7 +131,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/log_in">
+            app:layout_constraintTop_toBottomOf="@+id/loginLayout">
 
             <TextView
                 android:id="@+id/textView5"
@@ -142,12 +154,13 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/nunito_bold"
             android:text="Forgot password"
             android:textSize="16dp"
-            android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
