--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/page_bg"
-    tools:context=".RegisterActivity">
+    tools:context=".activities.RegisterActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,98 +54,154 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/header_lottie" />
 
-        <EditText
-            android:id="@+id/editText"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="30dp"
-            style="@style/input__bg"
-            android:clipToPadding="false"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            android:fontFamily="@font/nunito_regular"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/heading_text" />
-        <EditText
-            android:id="@+id/phoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            style="@style/input__bg"
-            android:hint="Phone Number"
-            android:inputType="phone"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/nunito_regular"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText"
-            />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/heading_text">
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="20dp"
-            style="@style/input__bg"
-            android:clipToPadding="false"
-            android:fontFamily="@font/nunito_regular"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
+            <FrameLayout
+                android:id="@+id/layoutImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_20sdp">
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/imageProfile"
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:background="@drawable/background_image"
+                    android:scaleType="centerCrop"
+                    app:riv_oval="true"/>
+                <TextView
+                    android:id="@+id/textAddImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Add Image"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp"/>
+            </FrameLayout>
+            <EditText
+                android:id="@+id/email"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+            <EditText
+                android:id="@+id/fullName"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Full Name"
+                android:inputType="textPersonName"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+            <EditText
+                android:id="@+id/nickName"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Nick Name"
+                android:inputType="text"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+            <EditText
+                android:id="@+id/phoneNumber"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Phone Number"
+                android:inputType="phone"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+            <EditText
+                android:id="@+id/password"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
+            <EditText
+                android:id="@+id/passwordConfirm"
+                style="@style/input__bg"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="30dp"
+                android:clipToPadding="false"
+                android:fontFamily="@font/nunito_regular"
+                android:hint="Password Confirm"
+                android:inputType="textPassword"
+                android:paddingHorizontal="24.5dp"
+                android:paddingVertical="12.5dp"
+                android:textColorHint="@color/primary__color"
+                android:textSize="16dp" />
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="25dp"
-            style="@style/input__bg"
-            android:clipToPadding="false"
-            android:fontFamily="@font/nunito_regular"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true">
+                <Button
+                    android:id="@+id/sign_up"
+                    android:layout_width="match_parent"
+                    android:layout_height="52dp"
+                    android:layout_marginHorizontal="25dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/primary__color"
+                    android:clipToOutline="true"
+                    android:elevation="10dp"
+                    android:fontFamily="@font/nunito_medium"
+                    android:text="Sign Up"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16dp"
+                    />
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="@dimen/_25sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:visibility="invisible"/>
+            </FrameLayout>
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/sign_up"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_marginHorizontal="25dp"
-            android:backgroundTint="@color/primary__color"
-            android:clipToOutline="true"
-            android:elevation="10dp"
-            android:fontFamily="@font/nunito_medium"
-            android:text="Sign Up"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -154,7 +210,7 @@
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sign_up">
+            app:layout_constraintTop_toBottomOf="@id/linearLayout">
 
             <TextView
                 android:id="@+id/textView5"
