--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,201 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/page_bg"
+    android:background="@color/primary__color"
     tools:context=".ChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false">
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_56sdp"
+        android:background="@drawable/background_content_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Your non-scrolling element 1 -->
-        <EditText
-            android:id="@+id/editText"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/conversationsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="25dp"
-            style="@style/input__bg"
+            android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:drawableEnd="@drawable/baseline_search_24"
-            android:fontFamily="@font/nunito_regular"
-            android:hint="Search"
-            android:inputType="textEmailAddress"
-            android:paddingHorizontal="24.5dp"
-            android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
-            android:textSize="16dp" />
+            android:orientation="vertical"
+            android:overScrollMode="never"
+            android:padding="@dimen/_20sdp"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-        <!-- ScrollView -->
-        <ScrollView
-            android:id="@+id/scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editText"
-            android:layout_marginBottom="96dp"
-            android:paddingHorizontal="20dp">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 
-            <!-- Scrollable elements go here -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <!-- Your scrollable elements go here -->
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraint1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:elevation="5dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="10dp"
-                    >
-
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/image1"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_medium"
-                            android:text="Davit Karapetyan"
-                            android:textColor="@color/primary__color"
-                            android:textSize="19dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/nunito_regular"
-                            android:text="Davit sent an attachment"
-                            android:textColor="#7F7F7F"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    app:dividerColor="#94BFFF"/>
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:elevation="5dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="10dp"
-                    >
-
-                    <ImageView
-                        android:id="@+id/imageView1"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/image1"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginLeft="5dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView1"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_medium"
-                            android:text="Davit Karapetyan"
-                            android:textColor="@color/primary__color"
-                            android:textSize="19dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/nunito_regular"
-                            android:text="Davit sent an attachment"
-                            android:textColor="#7F7F7F"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    app:dividerColor="#94BFFF"/>
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:elevation="5dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="10dp"
-                    >
-
-                    <ImageView
-                        android:id="@id/imageView2"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/image1"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginLeft="5dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/imageView2"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/nunito_medium"
-                            android:text="Davit Karapetyan"
-                            android:textColor="@color/primary__color"
-                            android:textSize="19dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:fontFamily="@font/nunito_regular"
-                            android:text="Davit sent an attachment"
-                            android:textColor="#7F7F7F"
-                            android:textSize="14sp" />
-                    </LinearLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-                <com.google.android.material.divider.MaterialDivider
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    app:dividerColor="#94BFFF"/>
-                <!-- Add more scrollable elements as needed -->
-            </LinearLayout>
-        </ScrollView>
-    </RelativeLayout>
-
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabNewChat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_marginLeft="@dimen/_16sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:backgroundTint="@color/primary__color"
+        app:tint="@color/white"
+        android:contentDescription="a"
+        android:clipToOutline="true"
+        android:elevation="10dp"
+        android:src="@drawable/baseline_add_24"
+        app:fabCustomSize="@dimen/_40sdp"
+        app:shapeAppearanceOverlay="@style/fab_3_rounded"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/_24sdp"
+        android:layout_marginRight="@dimen/_24sdp"
+        android:layout_marginBottom="@dimen/_24sdp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
